--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
   },
   "homepage": "https://github.com/CarbonLighthouse/svc-client#readme",
   "devDependencies": {
-    "eslint": "^3.14.1",
-    "eslint-config-xo-space": "^0.15.0",
-    "fetch-mock": "^5.9.4",
+    "eslint": "^3.19.0",
+    "eslint-config-xo-space": "^0.16.0",
+    "fetch-mock": "^5.12.0",
     "isomorphic-fetch": "^2.2.1",
-    "leche": "^2.1.2",
-    "mocha": "^3.2.0",
-    "nyc": "^10.1.2",
-    "watch": "^1.0.1"
+    "leche": "^2.2.0",
+    "mocha": "^3.4.2",
+    "nyc": "^11.0.3",
+    "watch": "^1.0.2"
   },
   "dependencies": {
     "content-type": "^1.0.2",
@@ -34,7 +34,7 @@
     "ci": "npm run lint && npm run cov",
     "cov": "nyc --reporter=html --reporter=text npm test",
     "lint": "eslint lib test",
-    "test": "mocha --require test/helper.js --reporter list",
+    "test": "mocha --require test/helper.js",
     "tdd": "watch 'clear && npm run -s test' lib test"
   },
   "eslintConfig": {
